--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header
 
 section
 {
+
     padding: 16px 20px 32px;
 }
 
@@ -63,6 +64,14 @@ b
     
 }
 
+.greating
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .staticsics-cart
 {
     display: flex;
@@ -71,6 +80,11 @@ b
     max-width: 356px;
 }
 
+.staticsics-cart-img
+{
+    width: 115px;
+    height: 115px;
+}
 .staticsics-cart-text
 {
     margin-left: 20px;
@@ -94,3 +108,6 @@ b
     height: 45px;
 }
 
+@media screen and (min-width: 1024px){
+    
+}
